// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A few items 1`] = `
HTMLCollection [
  <aside
    class="s-ZVitxLYKaOVI"
    role="menu"
    style="left: 25%; top: 25%; --size:130px;"
  >
    <ul
      class="s-ZVitxLYKaOVI"
    >
      <li
        class="s-ZVitxLYKaOVI"
        style="animation: __svelte_3505074470_0 150ms linear 0ms 1 both;"
      >
        <button
          class="s-NMyTiX1zi6rz"
        >
          <span
            class="material-icons s-NMyTiX1zi6rz"
          >
            home
          </span>
          
          
          
        </button>
        <!--&lt;Button&gt;-->
         
      </li>
      
      <li
        class="s-ZVitxLYKaOVI"
        style="animation: __svelte_3890762829_0 150ms linear 112.5ms 1 both;"
      >
        <button
          class="secondary s-NMyTiX1zi6rz"
        >
          <span
            class="material-icons s-NMyTiX1zi6rz"
          >
            settings
          </span>
          
          
          
        </button>
        <!--&lt;Button&gt;-->
         
      </li>
      
    </ul>
     
  </aside>,
  <button
    class="s-NMyTiX1zi6rz"
  >
    
    
    
    Close
  </button>,
]
`;

exports[`More items 1`] = `
HTMLCollection [
  <aside
    class="s-ZVitxLYKaOVI"
    role="menu"
    style="left: 25%; top: 25%; --size:180px;"
  >
    <ul
      class="s-ZVitxLYKaOVI"
    >
      <li
        class="s-ZVitxLYKaOVI"
        style="opacity: 1; left: 90.00000000000001px; top: 0px;"
      >
        <button
          class="s-NMyTiX1zi6rz"
        >
          <span
            class="material-icons s-NMyTiX1zi6rz"
          >
            home
          </span>
          
          
          
        </button>
        <!--&lt;Button&gt;-->
         
      </li>
      
      <li
        class="s-ZVitxLYKaOVI"
        style="opacity: 1; left: 160.3648334221227px; top: 33.885917832714px;"
      >
        <button
          class="secondary s-NMyTiX1zi6rz"
        >
          <span
            class="material-icons s-NMyTiX1zi6rz"
          >
            settings
          </span>
          
          
          
        </button>
        <!--&lt;Button&gt;-->
         
      </li>
      
      <li
        class="s-ZVitxLYKaOVI"
        style="opacity: 1; left: 177.74351209636413px; top: 110.02688405606831px;"
      >
        <button
          class="secondary s-NMyTiX1zi6rz"
        >
          <span
            class="material-icons s-NMyTiX1zi6rz"
          >
            face
          </span>
          
          
          
        </button>
        <!--&lt;Button&gt;-->
         
      </li>
      
      <li
        class="s-ZVitxLYKaOVI"
        style="opacity: 1; left: 129.04953652058023px; top: 171.08719811121773px;"
      >
        <button
          class="s-NMyTiX1zi6rz"
        >
          <span
            class="material-icons s-NMyTiX1zi6rz"
          >
            lock
          </span>
          
          
          
        </button>
        <!--&lt;Button&gt;-->
         
      </li>
      
      <li
        class="s-ZVitxLYKaOVI"
        style="opacity: 1; left: 50.95046347941975px; top: 171.0871981112177px;"
      >
        <button
          class="s-NMyTiX1zi6rz"
        >
          <span
            class="material-icons s-NMyTiX1zi6rz"
          >
            flip
          </span>
          
          
          
        </button>
        <!--&lt;Button&gt;-->
         
      </li>
      
      <li
        class="s-ZVitxLYKaOVI"
        style="opacity: 1; left: 2.2564879036358745px; top: 110.0268840560683px;"
      >
        <button
          class="s-NMyTiX1zi6rz"
        >
          <span
            class="material-icons s-NMyTiX1zi6rz"
          >
            shuffle
          </span>
          
          
          
        </button>
        <!--&lt;Button&gt;-->
         
      </li>
      
      <li
        class="s-ZVitxLYKaOVI"
        style="opacity: 1; left: 19.635166577877328px; top: 33.88591783271398px;"
      >
        <button
          class="s-NMyTiX1zi6rz"
        >
          <span
            class="material-icons s-NMyTiX1zi6rz"
          >
            rotate_left
          </span>
          
          
          
        </button>
        <!--&lt;Button&gt;-->
         
      </li>
      
    </ul>
     
  </aside>,
  <button
    class="s-NMyTiX1zi6rz"
  >
    
    
    
    Close
  </button>,
]
`;
